--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Parser-IPTables-Save
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.0.5 2013-01-05
+      Suport for icmp-type flag
 
